force-app/main/default/objects/NewsRun__c/NewsRun__c.object-meta.xml
<CustomObject>
    <description>Archive snapshot of a completed News Of The Week run. Created by WeeklySummaryQueueable when a run reaches Complete, so past newsletters are preserved.</description>
    <label>News Run</label>
    <nameField>
        <displayFormat>RUN-{0000}</displayFormat>
        <label>News Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>News Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>