force-app/main/default/objects/NewsRun__c/fields/News_Head__c.field-meta.xml
<CustomField>
    <fullName>News_Head__c</fullName>
    <description>Snapshot of the newsletter (News Head) from the completed run.</description>
    <label>News Head</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>