force-app/main/default/objects/NewsRun__c/fields/Processed_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Processed_Accounts__c</fullName>
    <description>Number of accounts processed in this run (copied at snapshot time).</description>
    <label>Processed Accounts</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>