force-app/main/default/objects/NewsRun__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <description>Date of the run this archive captured.</description>
    <label>Run Date</label>
    <type>Date</type>
</CustomField>