force-app/main/default/objects/NewsRun__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Copied from the config at snapshot time.</description>
    <label>Salesperson</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>News Runs</relationshipLabel>
    <relationshipName>NewsRuns</relationshipName>
    <type>Lookup</type>
</CustomField>