force-app/main/default/objects/NewsRun__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the run at archive time (currently always Complete).</description>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>