force-app/main/default/objects/NewsRun__c/fields/Total_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Accounts__c</fullName>
    <description>Number of accounts researched in this run (copied at snapshot time).</description>
    <label>Total Accounts</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>